spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -532,3 +532,16 @@
     letter-spacing: 1px;
     box-shadow: none;
 }
+
+ /* Media query for mobile screens */
+ @media only screen and (max-width: 600px) {
+    .mobile-only {
+      display: block;
+    }
+  }
+
+  @media only screen and (min-width: 601px) {
+    .mobile-only {
+      display: none;
+    }
+  }
